--- a/src/global.scss
+++ b/src/global.scss
@@ -14,6 +14,10 @@ body {
   // Microsoft not contain any country flags in their emojis
 }
 
+// a {
+//   text-decoration: none;
+// }
+
 button {
   border-radius: 9%;
 }
