--- a/src/example.scss
+++ b/src/example.scss
@@ -19,17 +19,23 @@
 }
 
 .container {
+  max-width: 1280px;
+  box-shadow: 0 0 10px 2px purple;
   display: grid;
-  grid-template-columns: 50px 50px 50px 50px;
-  grid-template-rows: auto;
+  grid-template-columns: repeat(4, 80px);
+  // grid-template-rows: auto;
   grid-template-areas:
     "header header header header"
-    "main main . sidebar"
+    "main   main   ...... sidebar"
     "footer footer footer footer";
+  // grid-gap: 10px;
+  // place-content: normal space-evenly; // Edge not supported
+  justify-content: space-evenly;
+  // justify-items: center;
 }
 
 .container > div {
-  min-height: 50px;
+  min-height: 64px;
 }
 
 .emoji-board {
